HW3/ANTLR4_LittleDuck/LittleDuckGrammarParser.py
# Generated from LittleDuckGrammar.g4 by ANTLR 4.9.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class LittleDuckGrammarParser ( Parser ):

    grammarFileName = "LittleDuckGrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'int'", "'float'", "'='", "'*'", "'/'", 
                     "'+'", "'-'", "'<>'", "'>'", "'<'", "'('", "')'", "'{'", 
                     "'}'", "','", "';'", "':'", "'program'", "'if'", "'else'", 
                     "'var'", "'print'" ]

    symbolicNames = [ "<INVALID>", "INT", "FLOAT", "EQUAL", "TIMES", "DIV", 
                      "PLUS", "MINUS", "DIFF", "GREATER", "SMALLER", "L_BRACE", 
                      "R_BRACE", "L_BRK", "R_BRK", "COMMA", "SEMICOLON", 
                      "COLON", "PROGRAM", "IF", "ELSE", "VAR", "PRINT", 
                      "ID", "CTEI", "CTEF", "STRING", "WHITESPACE" ]

    RULE_program = 0
    RULE_vars = 1
    RULE_vars2 = 2
    RULE_vars3 = 3
    RULE_tipo = 4
    RULE_bloque = 5
    RULE_estatuto2 = 6
    RULE_estatuto = 7
    RULE_asignacion = 8
    RULE_condicion = 9
    RULE_escritura = 10
    RULE_escrituraGram = 11
    RULE_expresion = 12
    RULE_exp = 13
    RULE_exp2 = 14
    RULE_termino = 15
    RULE_termino2 = 16
    RULE_factor = 17
    RULE_varcte = 18

    ruleNames =  [ "program", "vars", "vars2", "vars3", "tipo", "bloque", 
                   "estatuto2", "estatuto", "asignacion", "condicion", "escritura", 
                   "escrituraGram", "expresion", "exp", "exp2", "termino", 
                   "termino2", "factor", "varcte" ]

    EOF = Token.EOF
    INT=1
    FLOAT=2
    EQUAL=3
    TIMES=4
    DIV=5
    PLUS=6
    MINUS=7
    DIFF=8
    GREATER=9
    SMALLER=10
    L_BRACE=11
    R_BRACE=12
    L_BRK=13
    R_BRK=14
    COMMA=15
    SEMICOLON=16
    COLON=17
    PROGRAM=18
    IF=19
    ELSE=20
    VAR=21
    PRINT=22
    ID=23
    CTEI=24
    CTEF=25
    STRING=26
    WHITESPACE=27

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROGRAM(self):
            return self.getToken(LittleDuckGrammarParser.PROGRAM, 0)

        def ID(self):
            return self.getToken(LittleDuckGrammarParser.ID, 0)

        def SEMICOLON(self):
            return self.getToken(LittleDuckGrammarParser.SEMICOLON, 0)

        def bloque(self):
            return self.getTypedRuleContext(LittleDuckGrammarParser.BloqueContext,0)


        def vars(self):
            return self.getTypedRuleContext(LittleDuckGrammarParser.VarsContext,0)


        def getRuleIndex(self):
            return LittleDuckGrammarParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = LittleDuckGrammarParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.state = 48
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 38
                self.match(LittleDuckGrammarParser.PROGRAM)
                self.state = 39
                self.match(LittleDuckGrammarParser.ID)
                self.state = 40
                self.match(LittleDuckGrammarParser.SEMICOLON)
                self.state = 41
                self.bloque()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 42
                self.match(LittleDuckGrammarParser.PROGRAM)
                self.state = 43
                self.match(LittleDuckGrammarParser.ID)
                self.state = 44
                self.match(LittleDuckGrammarParser.SEMICOLON)
                self.state = 45
                self.vars()
                self.state = 46
                self.bloque()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(LittleDuckGrammarParser.VAR, 0)

        def vars2(self):
            return self.getTypedRuleContext(LittleDuckGrammarParser.Vars2Context,0)


        def getRuleIndex(self):
            return LittleDuckGrammarParser.RULE_vars

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVars" ):
                listener.enterVars(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVars" ):
                listener.exitVars(self)




    def vars(self):

        localctx = LittleDuckGrammarParser.VarsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_vars)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.match(LittleDuckGrammarParser.VAR)
            self.state = 51
            self.vars2()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vars2Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vars3(self):
            return self.getTypedRuleContext(LittleDuckGrammarParser.Vars3Context,0)


        def COLON(self):
            return self.getToken(LittleDuckGrammarParser.COLON, 0)

        def tipo(self):
            return self.getTypedRuleContext(LittleDuckGrammarParser.TipoContext,0)


        def SEMICOLON(self):
            return self.getToken(LittleDuckGrammarParser.SEMICOLON, 0)

        def vars2(self):
            return self.getTypedRuleContext(LittleDuckGrammarParser.Vars2Context,0)


        def getRuleIndex(self):
            return LittleDuckGrammarParser.RULE_vars2

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVars2" ):
                listener.enterVars2(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVars2" ):
                listener.exitVars2(self)




    def vars2(self):

        localctx = LittleDuckGrammarParser.Vars2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_vars2)
        try:
            self.state = 64
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 53
                self.vars3()
                self.state = 54
                self.match(LittleDuckGrammarParser.COLON)
                self.state = 55
                self.tipo()
                self.state = 56
                self.match(LittleDuckGrammarParser.SEMICOLON)
                self.state = 57
                self.vars2()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 59
                self.vars3()
                self.state = 60
                self.match(LittleDuckGrammarParser.COLON)
                self.state = 61
                self.tipo()
                self.state = 62
                self.match(LittleDuckGrammarParser.SEMICOLON)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vars3Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(LittleDuckGrammarParser.ID, 0)

        def COMMA(self):
            return self.getToken(LittleDuckGrammarParser.COMMA, 0)

        def vars3(self):
            return self.getTypedRuleContext(LittleDuckGrammarParser.Vars3Context,0)


        def getRuleIndex(self):
            return LittleDuckGrammarParser.RULE_vars3

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVars3" ):
                listener.enterVars3(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVars3" ):
                listener.exitVars3(self)




    def vars3(self):

        localctx = LittleDuckGrammarParser.Vars3Context(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_vars3)
        try:
            self.state = 70
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 66
                self.match(LittleDuckGrammarParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 67
                self.match(LittleDuckGrammarParser.ID)
                self.state = 68
                self.match(LittleDuckGrammarParser.COMMA)
                self.state = 69
                self.vars3()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(LittleDuckGrammarParser.INT, 0)

        def FLOAT(self):
            return self.getToken(LittleDuckGrammarParser.FLOAT, 0)

        def getRuleIndex(self):
            return LittleDuckGrammarParser.RULE_tipo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo" ):
                listener.enterTipo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo" ):
                listener.exitTipo(self)




    def tipo(self):

        localctx = LittleDuckGrammarParser.TipoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_tipo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            _la = self._input.LA(1)
            if not(_la==LittleDuckGrammarParser.INT or _la==LittleDuckGrammarParser.FLOAT):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BloqueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def L_BRK(self):
            return self.getToken(LittleDuckGrammarParser.L_BRK, 0)

        def estatuto2(self):
            return self.getTypedRuleContext(LittleDuckGrammarParser.Estatuto2Context,0)


        def R_BRK(self):
            return self.getToken(LittleDuckGrammarParser.R_BRK, 0)

        def getRuleIndex(self):
            return LittleDuckGrammarParser.RULE_bloque

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBloque" ):
                listener.enterBloque(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBloque" ):
                listener.exitBloque(self)




    def bloque(self):

        localctx = LittleDuckGrammarParser.BloqueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_bloque)
        try:
            self.state = 80
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 74
                self.match(LittleDuckGrammarParser.L_BRK)
                self.state = 75
                self.estatuto2(0)
                self.state = 76
                self.match(LittleDuckGrammarParser.R_BRK)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 78
                self.match(LittleDuckGrammarParser.L_BRK)
                self.state = 79
                self.match(LittleDuckGrammarParser.R_BRK)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Estatuto2Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def estatuto(self):
            return self.getTypedRuleContext(LittleDuckGrammarParser.EstatutoContext,0)


        def estatuto2(self):
            return self.getTypedRuleContext(LittleDuckGrammarParser.Estatuto2Context,0)


        def getRuleIndex(self):
            return LittleDuckGrammarParser.RULE_estatuto2

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEstatuto2" ):
                listener.enterEstatuto2(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEstatuto2" ):
                listener.exitEstatuto2(self)



    def estatuto2(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = LittleDuckGrammarParser.Estatuto2Context(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 12
        self.enterRecursionRule(localctx, 12, self.RULE_estatuto2, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.estatuto()
            self._ctx.stop = self._input.LT(-1)
            self.state = 89
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = LittleDuckGrammarParser.Estatuto2Context(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_estatuto2)
                    self.state = 85
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 86
                    self.estatuto() 
                self.state = 91
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class EstatutoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def asignacion(self):
            return self.getTypedRuleContext(LittleDuckGrammarParser.AsignacionContext,0)


        def condicion(self):
            return self.getTypedRuleContext(LittleDuckGrammarParser.CondicionContext,0)


        def escritura(self):
            return self.getTypedRuleContext(LittleDuckGrammarParser.EscrituraContext,0)


        def getRuleIndex(self):
            return LittleDuckGrammarParser.RULE_estatuto

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEstatuto" ):
                listener.enterEstatuto(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEstatuto" ):
                listener.exitEstatuto(self)




    def estatuto(self):

        localctx = LittleDuckGrammarParser.EstatutoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_estatuto)
        try:
            self.state = 95
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LittleDuckGrammarParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 92
                self.asignacion()
                pass
            elif token in [LittleDuckGrammarParser.IF]:
                self.enterOuterAlt(localctx, 2)
                self.state = 93
                self.condicion()
                pass
            elif token in [LittleDuckGrammarParser.PRINT]:
                self.enterOuterAlt(localctx, 3)
                self.state = 94
                self.escritura()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AsignacionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(LittleDuckGrammarParser.ID, 0)

        def EQUAL(self):
            return self.getToken(LittleDuckGrammarParser.EQUAL, 0)

        def expresion(self):
            return self.getTypedRuleContext(LittleDuckGrammarParser.ExpresionContext,0)


        def SEMICOLON(self):
            return self.getToken(LittleDuckGrammarParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return LittleDuckGrammarParser.RULE_asignacion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAsignacion" ):
                listener.enterAsignacion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAsignacion" ):
                listener.exitAsignacion(self)




    def asignacion(self):

        localctx = LittleDuckGrammarParser.AsignacionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_asignacion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(LittleDuckGrammarParser.ID)
            self.state = 98
            self.match(LittleDuckGrammarParser.EQUAL)
            self.state = 99
            self.expresion()
            self.state = 100
            self.match(LittleDuckGrammarParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondicionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(LittleDuckGrammarParser.IF, 0)

        def L_BRACE(self):
            return self.getToken(LittleDuckGrammarParser.L_BRACE, 0)

        def expresion(self):
            return self.getTypedRuleContext(LittleDuckGrammarParser.ExpresionContext,0)


        def R_BRACE(self):
            return self.getToken(LittleDuckGrammarParser.R_BRACE, 0)

        def bloque(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LittleDuckGrammarParser.BloqueContext)
            else:
                return self.getTypedRuleContext(LittleDuckGrammarParser.BloqueContext,i)


        def SEMICOLON(self):
            return self.getToken(LittleDuckGrammarParser.SEMICOLON, 0)

        def ELSE(self):
            return self.getToken(LittleDuckGrammarParser.ELSE, 0)

        def getRuleIndex(self):
            return LittleDuckGrammarParser.RULE_condicion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondicion" ):
                listener.enterCondicion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondicion" ):
                listener.exitCondicion(self)




    def condicion(self):

        localctx = LittleDuckGrammarParser.CondicionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_condicion)
        try:
            self.state = 118
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 102
                self.match(LittleDuckGrammarParser.IF)
                self.state = 103
                self.match(LittleDuckGrammarParser.L_BRACE)
                self.state = 104
                self.expresion()
                self.state = 105
                self.match(LittleDuckGrammarParser.R_BRACE)
                self.state = 106
                self.bloque()
                self.state = 107
                self.match(LittleDuckGrammarParser.SEMICOLON)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 109
                self.match(LittleDuckGrammarParser.IF)
                self.state = 110
                self.match(LittleDuckGrammarParser.L_BRACE)
                self.state = 111
                self.expresion()
                self.state = 112
                self.match(LittleDuckGrammarParser.R_BRACE)
                self.state = 113
                self.bloque()
                self.state = 114
                self.match(LittleDuckGrammarParser.ELSE)
                self.state = 115
                self.bloque()
                self.state = 116
                self.match(LittleDuckGrammarParser.SEMICOLON)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EscrituraContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(LittleDuckGrammarParser.PRINT, 0)

        def L_BRACE(self):
            return self.getToken(LittleDuckGrammarParser.L_BRACE, 0)

        def escrituraGram(self):
            return self.getTypedRuleContext(LittleDuckGrammarParser.EscrituraGramContext,0)


        def R_BRACE(self):
            return self.getToken(LittleDuckGrammarParser.R_BRACE, 0)

        def SEMICOLON(self):
            return self.getToken(LittleDuckGrammarParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return LittleDuckGrammarParser.RULE_escritura

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEscritura" ):
                listener.enterEscritura(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEscritura" ):
                listener.exitEscritura(self)




    def escritura(self):

        localctx = LittleDuckGrammarParser.EscrituraContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_escritura)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(LittleDuckGrammarParser.PRINT)
            self.state = 121
            self.match(LittleDuckGrammarParser.L_BRACE)
            self.state = 122
            self.escrituraGram()
            self.state = 123
            self.match(LittleDuckGrammarParser.R_BRACE)
            self.state = 124
            self.match(LittleDuckGrammarParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EscrituraGramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expresion(self):
            return self.getTypedRuleContext(LittleDuckGrammarParser.ExpresionContext,0)


        def COMMA(self):
            return self.getToken(LittleDuckGrammarParser.COMMA, 0)

        def escrituraGram(self):
            return self.getTypedRuleContext(LittleDuckGrammarParser.EscrituraGramContext,0)


        def varcte(self):
            return self.getTypedRuleContext(LittleDuckGrammarParser.VarcteContext,0)


        def getRuleIndex(self):
            return LittleDuckGrammarParser.RULE_escrituraGram

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEscrituraGram" ):
                listener.enterEscrituraGram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEscrituraGram" ):
                listener.exitEscrituraGram(self)




    def escrituraGram(self):

        localctx = LittleDuckGrammarParser.EscrituraGramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_escrituraGram)
        try:
            self.state = 136
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 126
                self.expresion()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 127
                self.expresion()
                self.state = 128
                self.match(LittleDuckGrammarParser.COMMA)
                self.state = 129
                self.escrituraGram()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 131
                self.varcte()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 132
                self.varcte()
                self.state = 133
                self.match(LittleDuckGrammarParser.COMMA)
                self.state = 134
                self.escrituraGram()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpresionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LittleDuckGrammarParser.ExpContext)
            else:
                return self.getTypedRuleContext(LittleDuckGrammarParser.ExpContext,i)


        def GREATER(self):
            return self.getToken(LittleDuckGrammarParser.GREATER, 0)

        def SMALLER(self):
            return self.getToken(LittleDuckGrammarParser.SMALLER, 0)

        def DIFF(self):
            return self.getToken(LittleDuckGrammarParser.DIFF, 0)

        def getRuleIndex(self):
            return LittleDuckGrammarParser.RULE_expresion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpresion" ):
                listener.enterExpresion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpresion" ):
                listener.exitExpresion(self)




    def expresion(self):

        localctx = LittleDuckGrammarParser.ExpresionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_expresion)
        try:
            self.state = 151
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 138
                self.exp()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 139
                self.exp()
                self.state = 140
                self.match(LittleDuckGrammarParser.GREATER)
                self.state = 141
                self.exp()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 143
                self.exp()
                self.state = 144
                self.match(LittleDuckGrammarParser.SMALLER)
                self.state = 145
                self.exp()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 147
                self.exp()
                self.state = 148
                self.match(LittleDuckGrammarParser.DIFF)
                self.state = 149
                self.exp()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def termino(self):
            return self.getTypedRuleContext(LittleDuckGrammarParser.TerminoContext,0)


        def exp2(self):
            return self.getTypedRuleContext(LittleDuckGrammarParser.Exp2Context,0)


        def getRuleIndex(self):
            return LittleDuckGrammarParser.RULE_exp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExp" ):
                listener.enterExp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExp" ):
                listener.exitExp(self)




    def exp(self):

        localctx = LittleDuckGrammarParser.ExpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_exp)
        try:
            self.state = 157
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 153
                self.termino()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 154
                self.termino()
                self.state = 155
                self.exp2()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Exp2Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PLUS(self):
            return self.getToken(LittleDuckGrammarParser.PLUS, 0)

        def exp(self):
            return self.getTypedRuleContext(LittleDuckGrammarParser.ExpContext,0)


        def MINUS(self):
            return self.getToken(LittleDuckGrammarParser.MINUS, 0)

        def getRuleIndex(self):
            return LittleDuckGrammarParser.RULE_exp2

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExp2" ):
                listener.enterExp2(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExp2" ):
                listener.exitExp2(self)




    def exp2(self):
